--- a/index.html
+++ b/index.html
@@ -29,12 +29,19 @@ h1 {
   display: block;
   margin: auto;
 }
+#score {
+  text-align: center;
+  font-family: "Indie Flower", cursive;
+  font-size: xx-large;
+  margin-top: 20px;
+}
 </style>
 </head>
 <body>
 <h1>Rob Everyone Simulator</h1>
 <p>Instructions: As people appear, rob them quickly before they disappear by left clicking them. Each time you rob someone, you'll gain between 1-5 coins. If you rob someone that appears golden, you'll gain in between 5-15 coins. Be careful to not click people who appear red, they will steal 3 coins. </p>
 <button onclick="start()" type="button" id="startbutton">start game</button>
+<div id="score">You have 0 coins!</div>
 <script>
 var coins = 0
 function start() {
@@ -42,14 +49,13 @@ document.getElementById("startbutton").remove();
 const intervalID = setInterval(createimg, 2000);
  setTimeout(() => {
         clearInterval(intervalID);
-        document.getElementById("score").innerHTML += "<br>Time's up!";
+        document.getElementById("score").innerHTML += "<br>Time's up! HIGH SCORE!";
       }, 60000);
     }
 
 function createimg() {
 const img = document.createElement("img");
 img.src = "thing.png";
-document.body.appendChild(img);
 img.style.position = 'absolute';
 const randomTop = Math.floor(Math.random() * (window.innerHeight - img.height));
 const randomLeft = Math.floor(Math.random() * (window.innerWidth - img.width)); 
