--- a/index.html
+++ b/index.html
@@ -39,18 +39,20 @@ h1 {
 </head>
 <body>
 <h1>Rob Everyone Simulator</h1>
-<p>Instructions: As people appear, rob them quickly before they disappear by left clicking them. Each time you rob someone, you'll gain between 1-5 coins. If you rob someone that appears golden, you'll gain in between 5-15 coins. Be careful to not click people who appear red, they will steal 3 coins. </p>
+<p>Instructions: As people appear, rob them quickly before they disappear by left clicking them.  you'll gain between 1-5 coins. If you rob someone that appears golden, you'll gain in between 1-15 coins. Be careful to not click people who appear red, they will steal 3 coins. You have 30 seconds.</p>
 <button onclick="start()" type="button" id="startbutton">start game</button>
 <div id="score">You have 0 coins!</div>
 <script>
 var coins = 0
 function start() {
 document.getElementById("startbutton").remove();
-const intervalID = setInterval(createimg, 2000);
- setTimeout(() => {
+const intervalID = setInterval(createimg, 500);
+const intervalID2 = setInterval(createimggold, 1000);
+ setTimeout(function() {
         clearInterval(intervalID);
+        clearInterval(intervalID2);
         document.getElementById("score").innerHTML += "<br>Time's up! HIGH SCORE!";
-      }, 60000);
+      }, 30000);
     }
 
 function createimg() {
@@ -74,7 +76,30 @@ img.style.left = `${randomLeft}px`;
         if (document.body.contains(img)) {
           img.remove();
         }
-      }, 1000);
+      }, 650);
+}
+function createimggold() {
+const gold = document.createElement("img");
+gold.src = "gold.png";
+gold.style.position = 'absolute';
+const randomTop = Math.floor(Math.random() * (window.innerHeight - gold.height));
+const randomLeft = Math.floor(Math.random() * (window.innerWidth - gold.width)); 
+gold.style.top = `${randomTop}px`;
+gold.style.left = `${randomLeft}px`;
+ gold.onclick = function () {
+        const gain = Math.floor(Math.random() * 15) + 1;
+        coins += gain;
+        document.getElementById("score").innerText = "You have " + coins + " coins!";
+        gold.remove();
+      };
+
+      document.body.appendChild(gold);
+
+      setTimeout(() => {
+        if (document.body.contains(gold)) {
+          gold.remove();
+        }
+      }, 500);
 }
 </script>
 </body>
