--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ h1 {
 </head>
 <body>
 <h1>Rob Everyone Simulator</h1>
-<p>Instructions: As people appear, rob them quickly before they disappear by left clicking them.  you'll gain between 1-5 coins. If you rob someone that appears golden, you'll gain in between 1-15 coins. Be careful to not click people who appear red, they will steal 3 coins. You have 30 seconds.</p>
+<p>Instructions: As people appear, rob them quickly before they disappear by left clicking them.  you'll gain between 1-5 coins. If you rob someone that appears golden, you'll gain in between 1-15 coins. Be careful to not click characters who appear red. Rarely a frog will appear and can grant you up to 100 coins. You have 30 seconds.</p>
 <button onclick="start()" type="button" id="startbutton">start game</button>
 <div id="score">You have 0 coins!</div>
 <script>
@@ -48,11 +48,15 @@ function start() {
 document.getElementById("startbutton").remove();
 const intervalID = setInterval(createimg, 500);
 const intervalID2 = setInterval(createimggold, 1000);
-const intervalID3 = setInterval(createimgred, 1500);
+const intervalID3 = setInterval(createimgred, 1000);
+const intervalID4 = setInterval(createimgredfrog, 1000);
+const intervalID5 = setInterval(createimgfrog, 5000);
  setTimeout(function() {
         clearInterval(intervalID);
         clearInterval(intervalID2);
         clearInterval(intervalID3);
+        clearInterval(intervalID4);
+        clearInterval(intervalID5);
         document.getElementById("score").innerHTML += "<br>Time's up! HIGH SCORE!";
       }, 30000);
     }
@@ -78,7 +82,7 @@ img.style.left = `${randomLeft}px`;
         if (document.body.contains(img)) {
           img.remove();
         }
-      }, 650);
+      }, 1000);
 }
 function createimggold() {
 const gold = document.createElement("img");
@@ -101,7 +105,7 @@ gold.style.left = `${randomLeft}px`;
         if (document.body.contains(gold)) {
           gold.remove();
         }
-      }, 500);
+      }, 650);
 }
 function createimgred() {
 const r = document.createElement("img");
@@ -124,7 +128,52 @@ r.style.left = `${randomLeft}px`;
         if (document.body.contains(r)) {
           r.remove();
         }
-      }, 500);
+      }, 3000);
+}
+function createimgredfrog() {
+const rf = document.createElement("img");
+rf.src = "rf.png";
+rf.style.position = 'absolute';
+const randomTop = Math.floor(Math.random() * (window.innerHeight - rf.height));
+const randomLeft = Math.floor(Math.random() * (window.innerWidth - rf.width)); 
+rf.style.top = `${randomTop}px`;
+rf.style.left = `${randomLeft}px`;
+ rf.onclick = function () {
+        coins = 0;
+        document.getElementById("score").innerText = "You have " + coins + " coins ;c";
+        rf.remove();
+      };
+
+      document.body.appendChild(rf);
+
+      setTimeout(() => {
+        if (document.body.contains(rf)) {
+          rf.remove();
+        }
+      },3000);
+}
+function createimgfrog() {
+const f = document.createElement("img");
+f.src = "f.png";
+f.style.position = 'absolute';
+const randomTop = Math.floor(Math.random() * (window.innerHeight - f.height));
+const randomLeft = Math.floor(Math.random() * (window.innerWidth - f.width)); 
+f.style.top = `${randomTop}px`;
+f.style.left = `${randomLeft}px`;
+ f.onclick = function () {
+        const gain = Math.floor(Math.random() * 100) + 1;
+        coins += gain;
+        document.getElementById("score").innerText = "You have " + coins + " coins!!";
+        f.remove();
+      };
+
+      document.body.appendChild(f);
+
+      setTimeout(() => {
+        if (document.body.contains(f)) {
+          f.remove();
+        }
+      },700);
 }
 </script>
 </body>
