--- a/index.html
+++ b/index.html
@@ -35,14 +35,68 @@ h1 {
   font-size: xx-large;
   margin-top: 20px;
 }
+#cool {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 75%;
+  height: 100px;
+  color: white;
+  border-color: white;
+  border: 5px solid;
+  border-bottom-right-radius: 20px;
+  border-top-right-radius: 20px;
+  text-align: center;
+  font-family: "Indie Flower", cursive;
+  margin-top: 10;
+  padding-top: 10;
+  float: left;
+  bottom: 0;
+  position: fixed;
+  background: #EEAECA;
+  background: radial-gradient(circle,rgba(238, 174, 202, 1) 0%, rgba(148, 187, 233, 1) 100%);
+}
+#cool2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 75%;
+  height: 100px;
+  color: white;
+  border-color: white;
+  border: 5px solid;
+  border-bottom-left-radius: 20px;
+  border-top-left-radius: 20px;
+  text-align: center;
+  font-family: "Indie Flower", cursive;
+  margin-bottom: 10;
+  padding-bottom: 10;
+  margin-left: 200;
+  padding-left: 200;
+  float: right;
+  background: #EEAECA;
+  background: radial-gradient(circle,rgba(238, 174, 202, 1) 0%, rgba(148, 187, 233, 1) 100%);
+}
+body {
+  margin: 0;
+  padding: 0;
+}
+#highscore {
+  text-align: center;
+  font-family: "Indie Flower", cursive;
+  font-size: x-large;
+  margin-top: 10px;
+}
 </style>
 </head>
 <body>
+<div id="cool2">fish</div>
 <h1>Rob Everyone Simulator</h1>
 <p>Instructions: As people appear, rob them quickly before they disappear by left clicking them.  you'll gain between 1-5 coins. If you rob someone that appears golden, you'll gain in between 1-15 coins. Be careful to not click characters who appear red. Rarely a frog will appear and can grant you up to 100 coins. You have 30 seconds.</p>
 <button onclick="start()" type="button" id="startbutton">start game</button>
 <div id="score">You have 0 coins!</div>
 <div id="highscore">"your highscore is 0 coins!</div>
+<div id="cool">Made by Flappyfroggy</div>
 <script>
 var coins = 0;
 var highscore = localStorage.getItem("highscore") || 0;
